Added support for `@value` javadoc reference to resolve into the actual value of the constant, if in the same class, or the class is in the same package, or the reference is fully qualified.